--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,22 @@
 </head>
 <body>
 <div class="main">
+    <div class="title filters">
+        <span>Исполнитель:</span>
+        <select class="select-executor">
+            <option value="any" selected>Любой</option>
+            <template>
+                <option></option>
+            </template>
+        </select>
+        <span>Статус:</span>
+        <select class="select-status">
+            <option selected>Любой</option>
+            <template>
+                <option></option>
+            </template>
+        </select>
+    </div>
     <table>
         <tr class="title">
             <th class="w1">#</th>
