--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -44,6 +44,25 @@ table {
     background-color: #CEE3F6;
 }
 
+.filters {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-top: 1px solid black;
+    height: 28px;
+}
+
+select {
+    border: 1px solid black;
+}
+
+.filters span {
+    margin-left: 2%;
+    margin-right: 4px;
+}
+
 tr {
     height: 28px;
     border: 1px solid black;
@@ -76,11 +95,9 @@ td {
 }
 
 .priorityChanged {
-    position: absolute;
-    top: -1px;
-    right: -1px;
-    bottom: -1px;
-    left: -1px;
-    border: 3px solid blue;
+    border: 4px solid blue;
+    font-size: 16px;
+    font-weight: bold;
+    color: blue;
 }
 
