--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,15 +14,15 @@
 <div class="main">
     <div class="title filters">
         <span>Исполнитель:</span>
-        <select class="select-executor">
-            <option value="any" selected>Любой</option>
+        <select class="select executor">
+            <option value="Any">Любой</option>
             <template>
                 <option></option>
             </template>
         </select>
         <span>Статус:</span>
-        <select class="select-status">
-            <option selected>Любой</option>
+        <select class="select status">
+            <option value="Any">Любой</option>
             <template>
                 <option></option>
             </template>
