--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -4,7 +4,7 @@ body {
 
 .main {
     width: 100%;
-    margin: 2% 0 0 0;
+    margin: 1% 0 0 0;
     box-shadow: 0 -14px 28px rgba(0,0,0,0.25), 0 -10px 10px rgba(0,0,0,0.22);
 }
 
@@ -99,5 +99,10 @@ td {
     font-size: 16px;
     font-weight: bold;
     color: blue;
+}
+
+.filters button {
+    margin-left: 2%;
+    border: 1px solid black;
 }
 
