todo create <options>

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,17 +14,17 @@
 <div class="main">
     <div class="title filters">
         <span>Исполнитель:</span>
-        <select class="select executor">
+        <select class="select executorName-filter">
             <option value="Any">Любой</option>
             <template>
-                <option></option>
+                <option class="varOpt"></option>
             </template>
         </select>
         <span>Статус:</span>
-        <select class="select status">
+        <select class="select status-filter">
             <option value="Any">Любой</option>
             <template>
-                <option></option>
+                <option class="varOpt"></option>
             </template>
         </select>
     </div>
