check unique view saving

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,14 +14,14 @@
 <div class="main">
     <div class="title filters">
         <span>Исполнитель:</span>
-        <select class="select executorName-filter">
+        <select class="executorName-filter">
             <option value="Any">Любой</option>
             <template>
                 <option class="varOpt"></option>
             </template>
         </select>
         <span>Статус:</span>
-        <select class="select status-filter">
+        <select class="status-filter">
             <option value="Any">Любой</option>
             <template>
                 <option class="varOpt"></option>
