--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,14 +15,12 @@
     <div class="title filters">
         <span>Исполнитель:</span>
         <select class="executorName-filter">
-            <option value="Any">Любой</option>
             <template>
                 <option class="varOpt"></option>
             </template>
         </select>
         <span>Статус:</span>
         <select class="status-filter">
-            <option value="Any">Любой</option>
             <template>
                 <option class="varOpt"></option>
             </template>
@@ -44,7 +42,7 @@
         <tbody class="container">
         <template>
             <tr class="row">
-                <td class="id"></td>
+                <td class="id"><a target="_blank" rel="noopener noreferrer" href=""></a></td>
                 <td class="src"></td>
                 <td class="creationDateTime"></td>
                 <td class="client"></td>
